# light-weight-opengl

./: README.md  light-weight-opengl.cabal  stack.yaml
src/Graphics/: LWGL.hs
src/Graphics/LWGL/: Api.hs  ApiConvenience.hs  Mesh.hs  Shader.hs  ShaderCompiler.hs  Texture.hs  Types.hs  Vertex.hs  Vertex_P.hs  Vertex_P_Norm.hs  Vertex_P_Norm_Col_Tex.hs  Vertex_P_Norm_Tan_Col_Tex.hs  Vertex_P_Norm_Tex.hs  Vertex_P_Tex.hs
