name:                light-weight-opengl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/psandahl/light-weight-opengl#readme
license:             BSD3
license-file:        LICENSE
author:              Patrik Sandahl
maintainer:          patrik.sandahl@gmail.com
copyright:           2017 Patrik Sandahl
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Graphics.LWGL
                       Graphics.LWGL.Vertex_P
                       Graphics.LWGL.Vertex_P_Tex
  other-modules:       Graphics.LWGL.Api
                       Graphics.LWGL.ApiConvenience
                       Graphics.LWGL.Mesh
                       Graphics.LWGL.Shader
                       Graphics.LWGL.Texture
                       Graphics.LWGL.Types
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , JuicyPixels
                     , linear
                     , OpenGLRaw
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/psandahl/light-weight-opengl
